--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "Object marshalling library for PHP supporting JSON and XML",
     "keywords": ["marshall","marshalling"],
     "homepage": "http://github.com/moodev/php-weasel",
+    "license": "ISC",
     "require": {
         "php": ">=5.3.0"
     },
