--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
         "php": ">=5.3.0",
         "psr/log": "~1.0"
     },
+    "require-dev": {
+        "mockery/mockery": "dev-master"
+    },
     "suggest": {
         "monolog/monolog": "A logging framework that implements PSR 3"
     },
