Xml marshaller now supports doctrine cofiguration. Interface of the Xml driver changed to match the Json one.
Reorganised things a little to move stuff common to Doctrine and Weasel annotations out of Annotation and into Common.

Adapter to allow a Weasel Cache instance to be used by the Doctrine AnnotationReader.

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "require-dev": {
         "mockery/mockery": "dev-master",
-        "doctrine/annotations": "dev-master"
+        "doctrine/annotations": "dev-master",
+        "doctrine/cache": "dev-master"
     },
     "suggest": {
         "monolog/monolog": "A logging framework that implements PSR 3",
