--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,15 @@
     "license": "ISC",
     "require": {
         "php": ">=5.3.0",
-        "psr/log": "~1.0"
+        "psr/log": "~1.0",
+        "doctrine/annotations": "~1.1",
+        "doctrine/cache": "~1.0"
     },
     "require-dev": {
-        "mockery/mockery": "dev-master",
-        "doctrine/annotations": "dev-master",
-        "doctrine/cache": "dev-master"
+        "mockery/mockery": "dev-master"
     },
     "suggest": {
-        "monolog/monolog": "A logging framework that implements PSR 3",
-        "doctrine/annotations": "Enables configuration using Doctrine's annotation library rather than Weasel's"
+        "monolog/monolog": "A logging framework that implements PSR 3"
     },
     "autoload": {
         "psr-0": {
