--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ php:
   - "5.4"
   - "5.3"
 before_script: composer install --dev
-script: "phpunit --bootstrap tests/bootstrap.php"
+script: "phpunit --coverage-text --bootstrap tests/bootstrap.php tests"
