--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ php:
   - "5.5"
   - "5.4"
   - "5.3"
-before_script: composer install --dev
+before_script: composer install -n --dev
 script: "phpunit --coverage-text --bootstrap tests/bootstrap.php tests"
