--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "php": ">=5.3.0",
         "psr/log": "~1.0",
         "doctrine/annotations": "~1.1",
-        "doctrine/cache": "~1.0"
+        "doctrine/cache": "~1.0",
+        "symfony/Console": ">=2.3"
     },
     "require-dev": {
         "mockery/mockery": "dev-master"
@@ -21,5 +22,6 @@
         "psr-0": {
             "Weasel": "lib"
         }
-    }
+    },
+    "bin": ["bin/buildJsonConfig.php"]
 }
