--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "doctrine/cache": "~1.0"
     },
     "require-dev": {
-        "mockery/mockery": "dev-master"
+        "mockery/mockery": "dev-master",
+        "symfony/Console": "dev-master"
     },
     "suggest": {
         "monolog/monolog": "A logging framework that implements PSR 3"
@@ -21,5 +22,6 @@
         "psr-0": {
             "Weasel": "lib"
         }
-    }
+    },
+    "bin": ["bin/buildJsonConfig.php"]
 }
