--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
         "php": ">=5.3.0",
         "psr/log": "~1.0",
         "doctrine/annotations": "~1.1",
-        "doctrine/cache": "~1.0"
+        "doctrine/cache": "~1.0",
+        "symfony/Console": "dev-master"
     },
     "require-dev": {
-        "mockery/mockery": "dev-master",
-        "symfony/Console": "dev-master"
+        "mockery/mockery": "dev-master"
     },
     "suggest": {
         "monolog/monolog": "A logging framework that implements PSR 3"
