--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "psr/log": "~1.1",
         "doctrine/annotations": "~1.4",
         "doctrine/cache": "~1.6",
-        "symfony/Console": "~3.4|~4.0"
+        "symfony/console": "~3.4|~4.0"
     },
     "require-dev": {
         "mockery/mockery": "~1.2",
