--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ php:
   - "7.0"
   - "5.6"
 before_script: composer install -n --dev
-script: "phpunit --coverage-text --bootstrap ./tests/bootstrap.php tests"
+script: "./vendor/bin/phpunit --coverage-text --bootstrap ./tests/bootstrap.php tests/"
