--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         "psr/log": "~1.1",
         "doctrine/annotations": "~1.4",
         "doctrine/cache": "~1.6",
-        "symfony/console": "~3.4|~4.0"
+        "symfony/console": "~3.4"
     },
     "require-dev": {
         "mockery/mockery": "~1.2",
-        "phpunit/phpunit": "~5."
+        "phpunit/phpunit": "~5.7|^6.0|^7.0"
     },
     "suggest": {
         "monolog/monolog": "A logging framework that implements PSR 3"
